added  bolzano-weistrass
best   quality til now  this   interactive file  is

--- a/index.html
+++ b/index.html
@@ -32,13 +32,22 @@
     <span class="tag">calculus</span>
     <div style="color:var(--muted);">Play with ε and watch δ respond so that |x−a|&lt;δ ⇒ |f(x)−L|&lt;ε.</div>
   </div>
-<div class="card">
-  <strong><a href="Reals_sequences_visualizer.html">ε–N Sequence Visualizer</a></strong>
-  <span class="tag">analysis</span>
-  <div style="color:var(--muted);">
-    Place N and watch points enter the ε-band around L: for n > N, |xₙ − L| < ε.
+
+  <div class="card">
+    <strong><a href="Reals_sequences_visualizer.html">ε–N Sequence Visualizer</a></strong>
+    <span class="tag">analysis</span>
+    <div style="color:var(--muted);">
+      Place N and watch points enter the ε-band around L: for n &gt; N, |xₙ − L| &lt; ε.
+    </div>
   </div>
-</div>
+
+  <div class="card">
+    <strong><a href="bolzanoweistrass.html">Bolzano–Weierstrass Explorer</a></strong>
+    <span class="tag">analysis</span>
+    <div style="color:var(--muted);">
+      Extract convergent subsequences from bounded sequences — monotone (LIS/LDS) &amp; nested intervals.
+    </div>
+  </div>
 </main>
 </body>
 </html>
