added  the uniform_vs_pointwise file
uniform_vs_pointwise is  high  quality  html interactive file

--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
       Extract convergent subsequences from bounded sequences — monotone (LIS/LDS) &amp; nested intervals.
     </div>
   </div>
+
+  <div class="card">
+    <strong><a href="uniform_vs_pointwise.html">Uniform vs Pointwise Convergence Lab</a></strong>
+    <span class="tag">analysis</span>
+    <div style="color:var(--muted);">
+      Compare f<sub>n</sub> with its limit f, watch sup<sub>x</sub>|f<sub>n</sub>−f|, and explore ε–N heatmaps to test uniformity.
+    </div>
+  </div>
 </main>
 </body>
 </html>
