--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
     <div style="color:var(--muted);">Direct, contrapositive, and contradiction with live highlighting.</div>
   </div>
 
+<div class="card">
+  <strong><a href="caushy.html">Cauchy Criterion Explorer — Tail Diameter</a></strong>
+  <span class="tag">analysis</span>
+  <div style="color:var(--muted);">
+    Slide N and ε; watch the tail diameter D(N) = sup<sub>m,n&gt;N</sub> |xₘ − xₙ|. Cauchy ⇔ D(N) → 0.
+  </div>
+</div>
+
+  
   <div class="card">
     <strong><a href="epsilon.html">ε–δ Limit Explorer</a></strong>
     <span class="tag">calculus</span>
